[project]
name = "project2"
version = "0.1.0"
description = "Console primitive database with table management and CRUD operations."
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [{ name = "Kirill Dublin" }]
dependencies = [
    "prompt>=0.4.1,<0.5.0",
    "prettytable>=3.16.0,<4.0.0",
]

[project.scripts]
project = "src.primitive_db.main:main"
database = "src.primitive_db.main:main"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
